--- a/style.css
+++ b/style.css
@@ -10,7 +10,7 @@ canvas {
   --dark-bg: rgba(15, 15, 15, 0.95);
   --spacing: 350px;
 
-  font-family: brandon-grotesque, sans-serif;
+  font-family: cubano-sharp, sans-serif;
   font-weight: 400;
   font-style: normal;
 }
@@ -32,7 +32,7 @@ h1,
 h2,
 h3,
 blockquote {
-  font-family: elevon, sans-serif;
+  font-family: cubano, sans-serif;
   font-weight: 700;
   font-style: normal;
 }
