fonts, style changes

--- a/style.css
+++ b/style.css
@@ -35,6 +35,7 @@ blockquote {
   font-family: cubano, sans-serif;
   font-weight: 700;
   font-style: normal;
+  display: inline-flex;
 }
 
 canvas {
@@ -44,8 +45,8 @@ canvas {
 }
 
 header {
-  background: var(--dark-bg);
-  grid-column: 2 / span 5;
+  /* background: var(--dark-bg); */
+  grid-column: 2/ span 5;
   font-size: 2.5rem;
   padding: 2rem;
   margin-bottom: var(--spacing);
@@ -70,8 +71,8 @@ blockquote {
 blockquote p {
   color: black;
   background-color: white;
-  font-size: 4rem;
-  display: inline;
+  font-size: 3rem;
+  display: inline-flex;
   line-height: 1;
 }
 
